Add jib plugin, add jwks