@@ -18,9 +18,8 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Hoxton.SR6</spring-cloud.version>
-		<dockerfile-maven-plugin.version>1.3.4</dockerfile-maven-plugin.version>
-		<docker.env.JAVA_OPTS>-Xmx512m</docker.env.JAVA_OPTS>
 		<docker.image.name>${project.artifactId}</docker.image.name>
+		<jib-maven-plugin.version>2.4.0</jib-maven-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -76,41 +75,43 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<layers>
-						<enabled>true</enabled>
-						<includeLayerTools>true</includeLayerTools>
-					</layers>
-					<image>
-						<env>
-							<JAVA_OPTS>-Xms256m -Xmx512m</JAVA_OPTS>
-						</env>
-					</image>
-				</configuration>
+				<executions>
+					<execution>
+						<id>build-info</id>
+						<goals>
+							<goal>build-info</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 
 			<plugin>
-				<groupId>io.fabric8</groupId>
-				<artifactId>docker-maven-plugin</artifactId>
-				<version>0.30.0</version>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>${jib-maven-plugin.version}</version>
 				<configuration>
-					<verbose>true</verbose>
-					<images>
-						<image>
-							<name>${docker.image.name}</name>
-							<build>
-								<from>openjdk:8-jre-alpine</from>
-								<tags>
-									<tag>latest</tag>
-									<tag>${project.version}</tag>
-								</tags>
-								<assembly>
-									<descriptorRef>artifact</descriptorRef>
-								</assembly>
-								<cmd>java ${JAVA_OPTS} -Djava.security.egd=file:/dev/./urandom -jar maven/${project.artifactId}-${project.version}.jar</cmd>
-							</build>
-						</image>
-					</images>
+					<from>
+						<image>openjdk:8-jre-alpine</image>
+					</from>
+					<to>
+						<image>${docker.image.name}</image>
+						<tags>
+							<tag>latest</tag>
+						</tags>
+					</to>
+					<container>
+						<jvmFlags>
+							<jvmFlag>-Xmx512m</jvmFlag>
+							<jvmFlag>-Dfile.encoding=UTF-8</jvmFlag>
+							<jvmFlag>-XX:+UseG1GC</jvmFlag>
+							<jvmFlag>-verbose:gc</jvmFlag>
+							<jvmFlag>-XX:+PrintGCDetails</jvmFlag>
+							<jvmFlag>-XX:+PrintGCDateStamps</jvmFlag>
+							<jvmFlag>-XX:+PrintGCTimeStamps</jvmFlag>
+							<jvmFlag>-Xloggc:/var/log/gc.log</jvmFlag>
+							<jvmFlag>-Djava.security.egd=file:/dev/./urandom</jvmFlag>
+						</jvmFlags>
+					</container>
 				</configuration>
 			</plugin>
 		</plugins>
